--- a/app/assets/stylesheets/navbar.css.scss
+++ b/app/assets/stylesheets/navbar.css.scss
@@ -30,6 +30,10 @@
   margin-right: 20px;
 }
 
+.navbar-default .navbar-nav > li > a{
+  color: #676868;
+}
+
 .sweepSchSocialMediaWrapper{
   float: right;
   margin-right: 42px;
