--- a/app/assets/stylesheets/sidebar.css.scss
+++ b/app/assets/stylesheets/sidebar.css.scss
@@ -5,7 +5,6 @@
     padding: 10px;
 
     .side {
-
       .side-head {
         margin: 1px;
         color: red;
@@ -18,18 +17,39 @@
           margin: 10px;
         }
       }
-
-      .side-foot {
-
-      }
     }
-
   }
 
   #main-content {
     background-color: #f8f8f8;
     min-height: 375px;
-    padding: 10px;
+    padding: 0 15px;
   }
-
 }
+
+.sweepSchGetStarted, .sweepSchProgressText{
+  font-family: 'Oxygen', sans-serif;
+  color: #676868;
+  //font-size: 20px;
+}
+
+.sweepSchGetStarted{
+  text-align: center;
+}
+.sweepSchSteps{
+  display: block;
+  margin: 20px 0;
+}
+
+.sweepSchProgressText{
+  vertical-align: top;
+  font-size: 30px;
+  padding-top: 3px;
+  padding-left: 10px;
+}
+
+.sweepSchUnderline{
+  height: 1px;
+  background-color: #676868;
+}
+
