--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -8,11 +8,14 @@
   margin-top: 20px;
 }
 
-.blue-bar {
-  //padding: 5px;
-  background-color: #80CCFF;
-  height: 150px;
-  border: 1px solid #e7e7e7;
+.sweepSchSpriteGreenCheck{
+  background: url('/assets/sweepSpriteSheet.png') no-repeat -17px -22px;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+}
+.sweepSchProgressText{
+  display: inline-block;
 }
 
 .blue-btn {
@@ -34,10 +37,15 @@
 
 
 .home-form {
-  border: 2px solid grey;
-  padding: 15px;
+  border: 2px solid #676868;
+  /*padding: 15px;
   margin: 15px;
-  margin-left: 0px;
+  margin-left: 0px;*/
+  margin-top: 33px;
+  border-radius:5px;
+  -webkit-box-shadow: 0px 3px 5px 4px rgba(182,185,186,1);
+  -moz-box-shadow: 0px 3px 5px 4px rgba(182,185,186,1);
+  box-shadow: 0px 3px 5px 4px rgba(182,185,186,1);
 }
 
 .home-image {
