Continue on main content. Will soon add a who what when were why on this page eventually....

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,20 +4,21 @@
     <div class="sweepSchDirectionsWrapper col-sm-12">
       <h1 class="sweepSchGetStarted">Schedule a truck in 3 easy steps:</h1>
       <div class="sweepSchUnderline"></div>
-      <div class="sweepSchSteps">
+      <div class="sweepSchSteps col-sm-12">
         <div class="sweepSchSpriteGreenCheck"></div>
         <div class="sweepSchProgressText">Create a FREE account</div>
+        <div class="sweepSchSpritePurpArrow"></div>
       </div>
-      <div class="sweepSchSteps">
+      <div class="sweepSchSteps col-sm-12">
         <div class="sweepSchSpriteGreenCheck"></div>
         <div class="sweepSchProgressText">Schedule a truck</div>
       </div>
-      <div class="sweepSchSteps">
+      <div class="sweepSchSteps col-sm-12">
         <div class="sweepSchSpriteGreenCheck"></div>
         <div class="sweepSchProgressText">Recieve confirmation and relax!</div>
       </div>
     </div>
-    <h5>Feel free to call us anytime at <u>303-691-0682</u>,
+    <!--<h5>Feel free to call us anytime at <u>303-691-0682</u>,
       or you can schedule a truck now. All you have to do is create an account,
       and click
       <% if current_user %> 
@@ -27,7 +28,7 @@
       <% end %>
       We confirm with you and, have a truck scheduled right away.
       You can also schedule us to come out and bid a recurring sweep or snowplow schedule. 
-    </h5>
+    </h5>-->
   </div>
   <!--******************************************START RIGHT HAND SIDE****************************************-->
   <div class="sweepSchRightMain col-sm-5">
