--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,7 @@
 
 html, body{// gets rid of the horizontal scroll and it was not getting applied by bootstrap
     overflow-x: hidden;
+    height: 100%;
     body{
     	background-color: #f8f8f8;
     	.navbar{
