--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -8,16 +8,6 @@
   margin-top: 20px;
 }
 
-.sweepSchSpriteGreenCheck{
-  background: url('/assets/sweepSpriteSheet.png') no-repeat -17px -22px;
-  width: 50px;
-  height: 50px;
-  display: inline-block;
-}
-.sweepSchProgressText{
-  display: inline-block;
-}
-
 .blue-btn {
 
   .btn-primary {
@@ -35,17 +25,37 @@
   margin: 10px;
 }
 
-
 .home-form {
-  border: 2px solid #676868;
+  border: 2px solid #e7e7e7;
   /*padding: 15px;
   margin: 15px;
   margin-left: 0px;*/
-  margin-top: 33px;
+  margin-top: 30px;
   border-radius:5px;
   -webkit-box-shadow: 0px 3px 5px 4px rgba(182,185,186,1);
   -moz-box-shadow: 0px 3px 5px 4px rgba(182,185,186,1);
   box-shadow: 0px 3px 5px 4px rgba(182,185,186,1);
+}
+
+.sweepSchSpriteGreenCheck{
+  background: url('/assets/sweepSpriteSheet.png') no-repeat -17px -22px;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+}
+
+.sweepSchSpritePurpArrow{
+  background: url('/assets/sweepSpriteSheet.png') no-repeat -17px -80px;
+  width: 45px;
+  height: 42px;
+  display: inline-block;
+  float: right;
+  margin-top: 5px;
+  margin-right: 5px;
+}
+
+.sweepSchProgressText{
+  display: inline-block;
 }
 
 .home-image {
