--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -3,16 +3,16 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <div><%= f.label :company_name %><br />
+    <div class=""><!--<%= f.label :company_name %><br />-->
     <%= f.text_field :company_name, class: "form-control" %></div>
 
-    <div><%= f.label :email %><br />
+    <div><!--<%= f.label :email %><br />-->
     <%= f.email_field :email, autofocus: true, class: "form-control" %></div>
 
-    <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
+    <div><!--<%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />-->
       <%= f.password_field :password, autocomplete: "off", class: "form-control" %></div>
 
-    <div><%= f.label :password_confirmation %><br />
+    <div><!--<%= f.label :password_confirmation %><br />-->
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %></div>
 
     <div><%= f.submit "Sign up" %></div>
