--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -3,21 +3,22 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <div class=""><!--<%= f.label :company_name %><br />-->
+    <div class="sweepSchTextLabels"><%= f.label :company_name %>
     <%= f.text_field :company_name, class: "form-control" %></div>
 
-    <div><!--<%= f.label :email %><br />-->
+    <div class="sweepSchTextLabels"><%= f.label :email %>
     <%= f.email_field :email, autofocus: true, class: "form-control" %></div>
 
-    <div><!--<%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />-->
+    <div class="sweepSchTextLabels"><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
       <%= f.password_field :password, autocomplete: "off", class: "form-control" %></div>
 
-    <div><!--<%= f.label :password_confirmation %><br />-->
+    <div class="sweepSchTextLabels"><%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %></div>
 
-    <div><%= f.submit "Sign up" %></div>
+    <div class="sweepSchSubmitWrapper col-sm-12"><%=f.submit "Create my account!", :class => 'sweepSchSubmit col-sm-4' %></div>
+    <!--<%= render "devise/shared/links" %>-->
   </div>
 </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  
