--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -33,7 +33,7 @@
   <!--******************************************START RIGHT HAND SIDE****************************************-->
   <div class="sweepSchRightMain col-sm-5">
     <div class="home-form col-sm-12">
-      <h4>Need a truck?</br>Sign up, and schedule one now.</h4>
+      <!--<h4>Need a truck?</br>Sign up, and schedule one now.</h4>-->
       <%= render "devise/registrations/form"%>
     </div>
   </div>
