Minor changes to home page. Still thinking about where I want to go with it. Starting on equipment page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="sweepSchSteps col-sm-12">
         <div class="sweepSchSpriteGreenCheck"></div>
-        <div class="sweepSchProgressText">Recieve confirmation and relax!</div>
+        <div class="sweepSchProgressText">Recieve confirmation</div>
       </div>
     </div>
     <!--<h5>Feel free to call us anytime at <u>303-691-0682</u>,
