--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -72,21 +72,17 @@
     background-color: #A3D8FB;
     color: #f3f3f3;
     border-radius: 3px;
-    transition: background .25s ease-in-out;
-   -moz-transition: background .25s ease-in-out;
-   -webkit-transition: background .25s ease-in-out;
-    transition: border-color .1s ease-in-out;
-   -moz-transition:border-color .1s ease-in-out;
-   -webkit-transition: border-color.1s ease-in-out;
-       transition:  color  .25s ease-in-out;
-   -moz-transition: color  .25s ease-in-out;
-   -webkit-transition:  color .25s ease-in-out;
+    opacity: 1;
+    transition: opacity .25s ease-in-out;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
 }
 
 .sweepSchSubmit:hover{
   background-color: #49B5FC;
-  border-color: #A8A8a8;
+  border-color: #CCC9C9;
   color: #FFF;
+  opacity: 2;
 }
 
 .sweepSchTextLabels{
