add some css updates

--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -6,6 +6,7 @@
 
 .truck-list {
   margin-top: 20px;
+  padding-bottom: 20px;
 }
 
 .blue-btn {
@@ -15,6 +16,12 @@
     color: black;
   }
 
+}
+
+.header-bar {
+  background-color: #80CCFF;
+  text-align: center;
+  margin-top: 10px;
 }
 
 .margin-bottom {
