--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -9,7 +9,7 @@
 </div>
 <div class="table-container">
   <div class= "reservations">
-    <div class='blue-bar' style='margin-top:0px'>
+    <div class='date-bar' style='margin-top:0px'>
       <h4 class='font-center'>
         Today
       </h4>
