--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="blue-bar margin-bottom">
+<div class="header-bar  margin-bottom">
   <div class="row">
     <div class="col-sm-12">
       <h4 class="font-center"> About Us </h4>
