--- a/app/views/static_pages/trucks.html.erb
+++ b/app/views/static_pages/trucks.html.erb
@@ -1,4 +1,4 @@
-<div class="blue-bar">
+<div class="header-bar">
   <div class="row">
     <div class="col-sm-2">
       <div class="trucks-line">
@@ -25,7 +25,7 @@
   </div>
 </div>
 
-<div class="blue-bar">
+<div class="header-bar">
   <div class="row">
     <div class="col-sm-2">
       <div class="trucks-line">
