--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -22,7 +22,7 @@
   background-color: #80CCFF;
   text-align: center;
   margin-top: 10px;
-  padding: 1px;
+  padding-right: 20px;
 }
 
 .margin-bottom {
