Add glyphicons instead of sprites so it works on prod????

--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -101,3 +101,17 @@
     font-weight: initial;
   }
 }
+
+.glyph {
+  span  {
+    font-size: 35px;
+    color: #31D404;
+  }
+}
+
+.glyph-arrow {
+  span  {
+    font-size: 35px;
+    color: purple;
+  }
+}
