--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,17 +5,41 @@
       <h1 class="sweepSchGetStarted">Schedule a truck in 3 easy steps:</h1>
       <div class="sweepSchUnderline"></div>
       <div class="sweepSchSteps col-sm-12">
-        <div class="sweepSchSpriteGreenCheck"></div>
-        <div class="sweepSchProgressText">Create a FREE account</div>
-        <div class="sweepSchSpritePurpArrow"></div>
+        <! div class="sweepSchSpriteGreenCheck"><!/div>
+        <div class="row">
+          <div class="col-sm-1 glyph">
+            <span class="glyphicon glyphicon-ok-circle"></span>
+          </div>
+          <div class="col-sm-10">
+            <div class="sweepSchProgressText">Create a FREE account</div>
+            <!div class="sweepSchSpritePurpArrow"><!/div>
+          </div>
+          <div class="col-sm-1 glyph-arrow">
+            <span class="glyphicon glyphicon-arrow-right"></span>
+          </div>
+        </div>
       </div>
       <div class="sweepSchSteps col-sm-12">
-        <div class="sweepSchSpriteGreenCheck"></div>
-        <div class="sweepSchProgressText">Schedule a truck</div>
+        <!div class="sweepSchSpriteGreenCheck"><!/div>
+        <div class="row">
+          <div class="col-sm-1 glyph">
+            <span class="glyphicon glyphicon-ok-circle"></span>
+          </div>
+          <div class="col-sm-11">
+            <div class="sweepSchProgressText">Schedule a truck</div>
+          </div>
+        </div>
       </div>
       <div class="sweepSchSteps col-sm-12">
-        <div class="sweepSchSpriteGreenCheck"></div>
-        <div class="sweepSchProgressText">Recieve confirmation</div>
+        <!div class="sweepSchSpriteGreenCheck"><!/div>
+        <div class="row">
+          <div class="col-sm-1 glyph">
+            <span class="glyphicon glyphicon-ok-circle"></span>
+          </div>
+          <div class="col-sm-11">
+            <div class="sweepSchProgressText">Recieve confirmation</div>
+          </div>
+        </div>
       </div>
     </div>
     <!--<h5>Feel free to call us anytime at <u>303-691-0682</u>,
