Fix the JS on the calendar that shows date fix the css for the glyphicons on the homepage

--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -10,7 +10,7 @@
 <div class="table-container">
   <div class= "reservations">
     <div class='date-bar' style='margin-top:0px'>
-      <h4 class='font-center'>
+      <h4 style='text-align:center'>
         Today
       </h4>
     </div>
