Some Meta tags for SEO

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SweepSchedule</title>
+  <title>Schedule A Street Sweeper or Snowplow in Denver</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %> 
   <%= csrf_meta_tags %>
   <!--<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> //start favicon work 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">-->
+  <!--- SEO Meta tags -->
+  <meta name=”description” content=”Sweep-A-Lot Is a street sweeping and snowplowing company. We serve the entire Denver Metro Area. 
+  Our website provides a way to schedule a truck online. Just sign up, and you are on your way.”/>
+  <!---->
 </head>
   <body>
     <% if !current_user %>
