--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Schedule A Street Sweeper or Snowplow in Denver</title>
+  <title>Schedule A Street Sweeper or Snowplow in Denver. Or get a bid for Parking Lot Striping, Top Coat or Chip Sealing, Sanding and even Power Washing.</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %> 
@@ -9,8 +9,10 @@
   <!--<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> //start favicon work 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">-->
   <!--- SEO Meta tags -->
-  <meta name=”description” content=”Sweep-A-Lot Is a street sweeping and snowplowing company. We serve the entire Denver Metro Area. 
-  Our website provides a way to schedule a truck online. Just sign up, and you are on your way.”/>
+  <meta name=”description” content=”Sweep-A-Lot Is a street sweeping, snowplowing, and all around parking lot maintenance company. We serve the entire Denver Metro Area. 
+  Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
+  From getting your parking lot clean, striped to replacing the top seal. Sweep-A-Lot can provide the services you need.
+  We service the whole Denver Metro area. As well as Boulder and Ft Collins. We offer Street Sweeping, Snow Plowing, Parking Lot Sanding, Parking Lot Striping, Chip Seal, Power Washing and more!”/>
   <!---->
 </head>
   <body>
