Meta update to try and remove a few duplicity errors.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Schedule A Street Sweeper or Snowplow in Denver. Or get a bid for Parking Lot Striping, Top Coat or Chip Sealing, Sanding and even Power Washing.</title>
+  <title>Schedule A Street Sweeper, Snowplow, Sand Truck, Top Coat and even Power Washing in Denver Colorado.</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %> 
