Trying to fix some w3c errors.

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -49,10 +49,10 @@
 
           <% else %>
 
-            <ul class="nav navbar-nav sweepSchNavBarRight">
+            <div class="nav navbar-nav sweepSchNavBarRight">
               <li><%= link_to "Sign In", new_user_session_path, class: "active" %></li>
               <li><%= link_to "Sign Up", new_user_registration_path, class: "active" %></li>
-            </ul>
+            </div>
 
           <% end %>
 
