--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Schedule A Street Sweeper, Snowplow, Sand Truck, Top Coat and even Power Washing in Denver Colorado.</title>
+  <title>Parking lot maintenance in Denver CO including Street Sweeping and Snowplowing</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %> 
@@ -12,16 +12,16 @@
   <meta name=”description” content=”Sweep-A-Lot Is a street sweeping, snowplowing, and all around parking lot maintenance company. We serve the entire Denver Metro Area. 
   Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
   From getting your parking lot clean, striped to replacing the top seal. Sweep-A-Lot can provide the services you need.
-  We service the whole Denver Metro area. As well as Boulder and Ft Collins. We offer Street Sweeping, Snow Plowing, Parking Lot Sanding, Parking Lot Striping, Chip Seal, Power Washing and more!”/>
-  <!---->
+  We service the whole Denver Metro area. As well as Boulder and Ft Collins. We offer Street Sweeping, Snow Plowing, Parking Lot Sanding, Parking Lot Striping, Chip Seal, Power Washing and more”/>
+  <!-- END SEO -->
 </head>
   <body>
     <% if !current_user %>
       <% @hide_sidebar = true %>
     <% end %>
-          <!--<div>
+          <!-- <div>
             <%#= image_tag "header_image.jpg", class: "stripes-banner" %>
-          </div>-->
+          </div> -->
     <div class="container-fluid">
       <div class="row">
         <div id="main-container">
