--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,18 +1,18 @@
 <div class=" sweepSchMainWrapper row">
   <div class="sweepSchLeftMain col-sm-5 col-sm-offset-1">
-    <!--<h5> We serve the entire Denver Metro Area </h5>-->
+    <!-- <h5> We serve the entire Denver Metro Area </h5> -->
     <div class="sweepSchDirectionsWrapper col-sm-12">
       <h1 class="sweepSchGetStarted">Schedule a truck in 3 easy steps:</h1>
       <div class="sweepSchUnderline"></div>
       <div class="sweepSchSteps col-sm-12">
-        <! div class="sweepSchSpriteGreenCheck"><!/div>
+        <!--  < div class="sweepSchSpriteGreenCheck"></div> -->
         <div class="row">
           <div class="col-sm-1 glyph">
             <span class="glyphicon glyphicon-ok-circle"></span>
           </div>
           <div class="col-sm-10">
             <div class="sweepSchProgressText">Create a FREE account</div>
-            <!div class="sweepSchSpritePurpArrow"><!/div>
+            <!--  <div class="sweepSchSpritePurpArrow"></div> -->
           </div>
           <div class="col-sm-1 glyph-arrow">
             <span class="glyphicon glyphicon-arrow-right"></span>
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="sweepSchSteps col-sm-12">
-        <!div class="sweepSchSpriteGreenCheck"><!/div>
+       <!-- <div class="sweepSchSpriteGreenCheck"></div> -->
         <div class="row">
           <div class="col-sm-1 glyph">
             <span class="glyphicon glyphicon-ok-circle"></span>
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="sweepSchSteps col-sm-12">
-        <!div class="sweepSchSpriteGreenCheck"><!/div>
+       <!-- <div class="sweepSchSpriteGreenCheck"></div> -->
         <div class="row">
           <div class="col-sm-1 glyph">
             <span class="glyphicon glyphicon-ok-circle"></span>
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <!--<h5>Feel free to call us anytime at <u>303-691-0682</u>,
+    <!-- <h5>Feel free to call us anytime at <u>303-691-0682</u>,
       or you can schedule a truck now. All you have to do is create an account,
       and click
       <% if current_user %> 
@@ -66,7 +66,7 @@
 <div class="row">
 
   <!--<div class="col-sm-6">
-    <!--<div class="row">
+     <div class="row" >
       <%= image_tag "little-truck.jpg", class: "col-sm-11 home-image" %>
     </div>
     <ul class="h4"><strong><u><%= link_to "Services", about_path %></u></strong>
