meh they dont need to index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
   <!--<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"> //start favicon work 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">-->
   <!--- SEO Meta tags -->
-  <meta name=”description” content=”Sweep-A-Lot Is a street sweeping, snowplowing, and all around parking lot maintenance company. We serve the entire Denver Metro Area. 
+  <meta name=”description” content=”Sweep-A-Lot Is a street sweeping, snowplowing, all around parking lot maintenance company. We serve the entire Denver Metro Area. 
   Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
-  From getting your parking lot clean, striped to replacing the top seal. Sweep-A-Lot can provide the services you need.
-  We service the whole Denver Metro area. As well as Boulder and Ft Collins. We offer Street Sweeping, Snow Plowing, Parking Lot Sanding, Parking Lot Striping, Chip Seal, Power Washing and more”/>
+  When it comes to roadway and parking lot maintenance, Sweep-A-Lot can provide the services you need.
+  We service the whole Denver Metro area. As well as Boulder and Ft Collins. We also offer: lot sanding/ice removal. We can chip-seal and stripe as well as power wash.”/>
   <!-- END SEO -->
 </head>
   <body>
