--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon">-->
   <!--- SEO Meta tags -->
   <meta name=”description” content=”Sweep-A-Lot Is a street sweeping, snowplowing, all around parking lot maintenance company. We serve the entire Denver Metro Area. 
-  Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
+  As well as Boulder and Ft Collins. Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
   When it comes to roadway and parking lot maintenance, Sweep-A-Lot can provide the services you need.
-  We service the whole Denver Metro area. As well as Boulder and Ft Collins. We also offer: lot sanding/ice removal. We can chip-seal and stripe as well as power wash.”/>
+  We also offer: lot sanding | ice removal. We can chip-seal, stripe and power wash.”/>
   <!-- END SEO -->
 </head>
   <body>
