Dont worry I am sure I will find more. Its fun pushing to master untill something screws up =O

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Parking lot maintenance in Denver CO including Street Sweeping and Snowplowing</title>
+  <title>Parking lot maintenance in Denver CO, including Street Sweeping and Snowplowing</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= stylesheet_link_tag 'application' %>
   <%= javascript_include_tag 'application' %> 
