--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -7,7 +7,7 @@
 
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <div class="sweepSchLinkSignIn"><%= link_to "Sign up", new_registration_path(resource_name) %></div>
+  <div class="sweepSchLinkSignIn blue-btn"><%= link_to "Sign up", new_registration_path(resource_name), class: "btn btn-primary add-margin-20" %></div>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
