Make that sucker look better. Switch around the order of the top data on homepage

--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -102,17 +102,18 @@
   }
 }
 
-
-.our-company-box {
-  padding-right: 35px;
-}
-
+//**********Glyphicons***********
 .glyph {
  span  {
     font-size: 25px;
     color: #31D405;
     margin-top: 10px;
   }
+}
+
+.glyph-star {
+
+  color: #F5F542;
 }
 
 .glyph-road {
@@ -144,3 +145,4 @@
     color: purple;
   }
 }
+//***********END GLYPHICONS***********
