--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,44 +1,8 @@
 <div class="row">
+
   <div class="col-sm-3 col-sm-offset-1">
     <div class="sweepSchProgressText center-text">
-      <h2>Contact info</h2>
-      <div class="sweepSchUnderline"></div>
-      <div class="row">
-        <div class="glyph-check">
-          <span class="glyphicon glyphicon-earphone col-sm-1 col-sm-offset-1"></span><h4 class="col-sm-9">Phone:</br> 303-691-0682</h4>
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-sm-1 col-sm-offset-1 glyph-envelope">
-          <span class="glyphicon glyphicon-envelope"></span>
-        </div>
-        <div class="col-sm-9">
-          <h4 class="row">Email: <%= mail_to "theajbs@msn.com" %></h4>
-        </div>
-      </div>
-
-    </div>
-  </div>
-  <div class="col-sm-4 center-text">
-      <%#= image_tag "dual_sweepers.jpg", class: "col-sm-12 home-image" %>
-    <div class="our-company-box">
-      <div class="sweepSchProgressText">
-        <h2>Our Company</h2>
-        <div class="sweepSchUnderline"></div>
-          <h4 class="row"><span class="glyphicon glyphicon-star"></span> We offer a full line of services, to help with maintaining your parking lot.  </h4>
-          <h4 class="row"><span class="glyphicon glyphicon-star"></span> We serve the whole Denver Metro Area. Including Boulder and Ft. Collins.  </h4>
-          <h4 class="row"><span class="glyphicon glyphicon-star"></span> We have been in buisness for 20+ years</h4>
-          <!-- Sweep-A-Lot Is a street sweeping, snowplowing, all around parking lot maintenance company. We serve the entire Denver Metro Area. 
-          As well as Boulder and Ft Collins. Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
-          When it comes to roadway and parking lot maintenance, Sweep-A-Lot can provide the services you need.
-          We also offer: lot sanding | ice removal. We can chip-seal, stripe and power wash. -->
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-3">
-    <div class="sweepSchProgressText center-text">
-      <h2>Parking Lot Maintenance</h2>
+      <h2>Services</h2>
       <div class="sweepSchUnderline"></div>
       <div class="row">
         <div class="glyph-check">
@@ -73,6 +37,47 @@
 
     </div>
   </div>
+
+
+  <div class="col-sm-4 center-text">
+    <%#= image_tag "dual_sweepers.jpg", class: "col-sm-12 home-image" %>
+    <div class="sweepSchProgressText">
+      <h2>Our Company</h2>
+      <div class="sweepSchUnderline"></div>
+        <h4 class="row"><div class="glyph-star"><span class="glyphicon glyphicon-star col-sm-1"></span></div> We offer a full line of services to help with maintaining your parking lot.</h4>
+        <h4 class="row"><div class="glyph-star"><span class="glyphicon glyphicon-star col-sm-1"></span></div> We serve the whole Denver Metro Area. Including Boulder and Ft. Collins.  </h4>
+        <h4 class="row"><div class="glyph-star"><span class="glyphicon glyphicon-star col-sm-1"></span></div> We have been in buisness for 20+ years!</h4>
+        <h4 class="row"><div class="glyph-star"><span class="glyphicon glyphicon-star col-sm-1"></span></div> We can do everything. From public road sweeping, to private lot maintenance. </h4>
+        <h4 class="row"><div class="glyph-star"><span class="glyphicon glyphicon-star col-sm-1"></span></div> We are family owned and run. </h4>
+        <!-- Sweep-A-Lot Is a street sweeping, snowplowing, all around parking lot maintenance company. We serve the entire Denver Metro Area. 
+        As well as Boulder and Ft Collins. Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
+        When it comes to roadway and parking lot maintenance, Sweep-A-Lot can provide the services you need.
+        We also offer: lot sanding | ice removal. We can chip-seal, stripe and power wash. -->
+    </div>
+  </div>
+
+  <div class="col-sm-3">
+    <div class="sweepSchProgressText center-text">
+      <h2>Contact info</h2>
+      <div class="sweepSchUnderline"></div>
+      <div class="row">
+        <div class="glyph-check">
+          <span class="glyphicon glyphicon-earphone col-sm-1 col-sm-offset-1"></span><h4 class="col-sm-9">Phone:</br> 303-691-0682</h4>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-1 col-sm-offset-1 glyph-envelope">
+          <span class="glyphicon glyphicon-envelope"></span>
+        </div>
+        <div class="col-sm-9">
+          <h4 class="row">Email: <%= mail_to "theajbs@msn.com" %></h4>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 </div>
 <legend></legend>
 <div class=" sweepSchMainWrapper row">
