--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -63,7 +63,7 @@
       <h2 class="black-font">Contact info</h2>
       <div class="sweepSchUnderline"></div>
       <div class="row">
-        <div class="glyph-check">
+        <div class="glyph-phone">
           <span class="glyphicon glyphicon-earphone col-sm-1 col-sm-offset-1"></span><h4 class="col-sm-9 black-font">Phone:</br> 303-691-0682</h4>
         </div>
       </div>
@@ -117,7 +117,7 @@
       <div class="sweepSchSteps col-sm-12">
        <!-- <div class="sweepSchSpriteGreenCheck"></div> -->
         <div class="row">
-          <div class="col-sm-1 glyph-envelope">
+          <div class="col-sm-1 glyph-cell">
             <span class="glyphicon glyphicon-phone"></span>
           </div>
           <div class="col-sm-11">
