--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -111,6 +111,23 @@
   }
 }
 
+.glyphicon-time {
+  color: #05CFF7;
+  margin-top: 20px;
+}
+.glyphicon-edit {
+  color: #A907FA;
+  margin-top: 24px;
+}
+.glyphicon-list-alt {
+  color: #F7BF05;
+  margin-top: 24px;
+}
+.glyphicon-ok-circle {
+  color: #05F762;
+  margin-top: 24px;
+}
+
 .glyph-star {
 
   color: #F5F542;
@@ -128,7 +145,6 @@
     font-size: 27px;
     margin-top: 15px;
     color: #49B5FC;
-    background-color: #828F9E;
   }
 }
 
