--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -3,24 +3,28 @@
   width: 100%;
   overflow: hidden;
   position: relative;
+  right: 2%;
   width: 110%;
+
+  .head-text {
+    position: relative;
+    left: 6.5%;
+    color: #BBF2FA;
+    width: 100%;
+  }
+
 
   .headbar-image-right {
     z-index: 0;
     position: absolute;
     min-height: 326px;
+    right: 5%;
     width: 130%;
-    opacity: 0.5;
+    opacity: 0.9;
+
   }
 }
 
-.headbar-image-left {
-  z-index: 0;
-  position: absolute;
-  right: 52.5%;
-  min-height: 326px;
-  opacity: 0.3;
-}
 
 
 .indent {
