some small spelling fixes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,7 @@
       <div class="glyphicon glyphicon-edit col-sm-1"></div><h3 class="col-sm-10">Schedule a truck at a time that is convienent for you.</h3>
     </div>
     <div class="row head-text">
-      <div class="glyphicon glyphicon-list-alt col-sm-1"></div><h3 class="col-sm-10">Schedule someone to bid your lot for out services.</h3>
+      <div class="glyphicon glyphicon-list-alt col-sm-1"></div><h3 class="col-sm-10">Schedule someone to bid your lot for any of our services.</h3>
     </div>
     <div class="row head-text">
       <div class="glyphicon glyphicon-ok-circle col-sm-1"></div><h3 class="col-sm-10">We will confirm your reservation in minutes.</h3>
