--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,7 @@
   </br> -->
 <div id="about-text">
   <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-5 col-sm-offset-1">
       <em></em> 
       <h4 class="sweepSchProgressText"><em></em>Sweep-A-Lot Is a street sweeping, snowplowing, all around parking lot maintenance company. We serve the entire Denver Metro Area. 
         As well as Boulder and Ft Collins.</br><em></em> Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
