--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,7 +6,7 @@
     <div class="col-sm-5 col-sm-offset-1">
       <em></em> 
       <h4 class="sweepSchProgressText"><em></em>Sweep-A-Lot Is a street sweeping, snowplowing, all around parking lot maintenance company. We serve the entire Denver Metro Area. 
-        As well as Boulder and Ft Collins.</br><em></em> Our website provides a way to schedule a truck online. Just sign up, and you are on your way.
+        As well as Boulder and Ft Collins.</br><em></em> Our website provides a way to schedule a truck online. Just <%= link_to "sign up,", new_user_registration_path %> and you are on your way.
         When it comes to roadway and parking lot maintenance, Sweep-A-Lot can provide the services you need.
       </h4>
     </div>
