Add user to database update user phone number if its not available style the sidebar and equipment page.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -63,6 +63,10 @@
   padding-right: 4%;
 }
 
+.negative-marg-right-20 {
+  margin-right: -35px;
+}
+
 .black-font {
   color: black;
 }
@@ -71,3 +75,4 @@
   position: relative;
   left: 3%;
 }
+
