--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -11,6 +11,7 @@ hr {
 .reservation-form {
   border: 4px inset #CCC8CC;
   background-color: #B6FAD4;
+  margin-right: -35px;
   padding: 8px;
 }
 
