--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -30,8 +30,10 @@
 }
 
 .clean-photo {
-  margin: 10px;
-  margin-top: 35px;
+  width: 169.5%;
+  margin-right: 15px;
+  position: relative;
+  top: 40px;
 }
 
 .home-form {
