--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,8 +28,22 @@
           <% else%>
             <li><%= link_to "Schedule A Truck", root_path, class: "active" %></li>
           <% end %>
-          <li><%= link_to "Equipment", trucks_path, class: "active" %></li>
+
+            <li class="dropdown">
+              <%= link_to "#", class: "dropdown-toggle", data: { toggle: "dropdown"} do %>
+                Equipment <span class="caret"></span>
+              <% end %>
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to "Sweepers", trucks_path, class: "" %></li>
+                <!-- divider -->
+                <li class="divider"></li>
+                <li><%= link_to "Snow Plows", snow_plows_path, class: "" %></li>
+
+              </ul>
+            </li>
+
           <li><%= link_to "About", about_path, class: "active" %></li>
+
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if current_user %>
