--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="row head-container">
-    <%= image_tag "striped_lot_header.png", class: "headbar-image-right" %>
+    <%= image_tag "parking-stripe-header2.jpg", class: "headbar-image-right" %>
   <div class="sweepSchProgressText">
     <div class="row head-text">
       <div class="glyphicon glyphicon-time col-sm-1"></div><h3 class="col-sm-10">Save time with our online scheduling app.</h3>
