Add headers to equipment page. Change the sprite sheet. See if it works on production.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -23,7 +23,24 @@
     opacity: 0.9;
 
   }
+
+  .plow-header {
+    width: 98%;
+    min-height: 326px;
+    position: absolute;
+    left: 15px;
+  }
+
+  .sweep-header {
+   height: 190%; 
+    position: absolute;
+    min-height: 326px;
+    bottom: 2px;
+  }
+
+
 }
+
 
 
 
