--- a/app/views/static_pages/trucks.html.erb
+++ b/app/views/static_pages/trucks.html.erb
@@ -1,3 +1,7 @@
+
+<div class="row head-container">
+  <%= image_tag "sweep-header.jpg", class: "sweep-header" %>
+</div>
 <div class="header-bar">
   <div class="row">
     <div class="col-sm-2">
