--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -49,7 +49,7 @@
 }
 
 .sweepSchSpriteGreenCheck{
-  background: url('/assets/sweepSpriteSheet.png') no-repeat -17px -22px;
+  background: url('sweepSpriteSheet.png') no-repeat -17px -22px;
   width: 50px;
   height: 50px;
   display: inline-block;
