Remove pictures that are not used. some styles. Clean up sign up page.

--- a/app/assets/stylesheets/trucks.css.scss
+++ b/app/assets/stylesheets/trucks.css.scss
@@ -64,6 +64,10 @@
   margin-top: 7px;
   margin-right: 5px;
 }
+.sweepSchSpriteFacebook {
+  background: url('sweepSpriteSheet.png');
+  display: inline-block;
+}
 
 .sweepSchProgressText{
   display: inline-block;
