--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,8 @@
-<h2>Sign up, schedule a truck, and have a clean lot today!</h2>
-
+<div class="center-text">
+  <h2 class="sweepSchProgressText">Sign up, schedule a truck, and have a clean lot today!</h2>
+</div>
 <div class="row">
-  <div class="col-sm-6">
+  <div class="home-form col-sm-6 col-sm-offset-3">
     <%= render "devise/registrations/form" %>
   </div>
 </div>
