--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,16 @@
   When it comes to roadway and parking lot maintenance, Sweep-A-Lot can provide the services you need.
   We also offer: lot sanding | ice removal. We can chip-seal, stripe and power wash.”/>
   <!-- END SEO -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-59137809-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
   <body>
     <% if !current_user %>
